--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,7 +4,21 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/bg-masthead.jpg");
+  /* rgba(22,22,22,0) 0%, rgba(22,22,22,0.25) 25%, rgba(22,22,22,0.75) 75%, #161616 100% */
+  background: linear-gradient(to bottom, rgba(22,22,22,0.25) 25%, rgba(22,22,22,0.75) 75%, #161616 100%),
+   
+    /* url("../img/bg-masthead.jpg"); */
+   
+   /* url("../img/adirondacks.JPG"); */
+   
+   /* url("../img/chazy.JPG"); */
+  
+   /* url("../img/engelberg.JPG"); */
+ 
+   url("../img/huasteca.JPG");
+   
+   /* url("../img/teotihuacan.JPG"); */
+
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
