changing project links to directory, matrixio, crimeStats

--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -24,9 +24,10 @@
 }
 
 @media (min-width: 992px) {
-  .projects-section .project-text {
+  /* .projects-section .project-text {
     padding: 5rem;
-  }
+    
+  } */
   .projects-section .project-text hr {
     border-color: #64a19d;
     border-width: .25rem;
